fix excess space in content wrap

--- a/dev/scss/_flex-aside.scss
+++ b/dev/scss/_flex-aside.scss
@@ -6,16 +6,26 @@
 
    @media (min-width:64em){
        & {
-        //    line-height: 0;
+        //    general styles for grid layout
            display: grid;
            grid-template-columns: repeat(2, 1fr);
            column-gap:.5rem;
            max-width: 960px;
            margin: 0 auto;
-        
+
+        //  tells the gallery section which cell to occupy
            .gallery-section{
                grid-column: 1/2;
                grid-row: 2/2;
+           }
+
+           .food{
+        // esnsure that theres no excess gap between the gallery and the top section
+            margin-bottom: -5.375em;
+           }
+
+           .aside-2{
+            margin-top: -4.5rem;
            }
 
        }
